Update French translations again
**Why**: Better copy

**How**: Also run i18n-tasks normalize to make things consistent

--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -19,7 +19,7 @@ fr:
       ssn: Numéro d'assurance sociale
       verification:
         instructions: Votre compte requiert la vérification d'un code secret.
-        reactivate_button: Entrez le code que vous avez reçu par US mail
+        reactivate_button: Entrez le code que vous avez reçu par la poste
         success: Votre compte a été vérifié.
         with_phone_button: Verifiez avec votre téléphone
     items:
