--- a/config/locales/mailer/fr.yml
+++ b/config/locales/mailer/fr.yml
@@ -1,19 +1,16 @@
 ---
 fr:
   mailer:
-    about: À propos %{app}
+    about: À propos de %{app}
     confirmation_instructions:
       first_sentence:
         confirmed: Vous tentez de changer votre adresse courriel?
-        reset_requested: 'Votre compte %{app} a été réinitialisé par un représentant
-          du soutien technique. Pour continuer, vous devez confirmer votre adresse
-          courriel.
+        reset_requested: 'Votre compte %{app} a été réinitialisé par un représentant du soutien technique. Pour continuer, vous devez confirmer votre adresse courriel.
 
 '
         unconfirmed: Merci d'avoir créé un compte.
       footer: Ce lien expirera dans %{confirmation_period}.
-      header: "%{intro} Veuillez cliquer sur le lien ci-dessous ou copier et coller
-        le lien complet dans votre navigateur.\n"
+      header: "%{intro} Veuillez cliquer sur le lien ci-dessous ou copier et coller le lien complet dans votre navigateur.\n"
       link_text: Confirmez votre adresse courriel
     email_change_notice:
       subject: Changez votre adresse courriel
@@ -24,8 +21,7 @@ fr:
     privacy_policy: Politique de confidentialité
     reset_password:
       footer: Ce lien expire dans %{expires} heures.
-      header: 'Pour terminer la réinitialisation de votre mot de passe, veuillez cliquer
-        sur le lien ci-dessous ou copier et coller le lien complet dans votre navigateur.
+      header: 'Pour terminer la réinitialisation de votre mot de passe, veuillez cliquer sur le lien ci-dessous ou copier et coller le lien complet dans votre navigateur.
 
 '
       link_text: Réinitialisez votre mot de passe
