--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -3,7 +3,7 @@ fr:
   user_mailer:
     contact_link_text: communiquez avec nous
     email_changed:
-      help: 'Si vous préférez ne pas changher votre adresse courriel, veuillez visiter le %{help_link} de %{app} ou %{contact_link}.
+      help: 'Si vous préférez ne pas changer votre adresse courriel, veuillez visiter le %{help_link} de %{app} ou %{contact_link}.
 
 '
       intro: L'adresse courriel de votre compte %{app} a été changée.
