Rename 2fa translation key to mfa
**Why**:
When we ship translations off to vendors, "2fa" gets turned into the
XML tag <2fa> which an invalid tag indentifier, so changing this
makes for a friendlier translation pipeline.

--- a/config/locales/instructions/es.yml
+++ b/config/locales/instructions/es.yml
@@ -1,18 +1,6 @@
 ---
 es:
   instructions:
-    2fa:
-      authenticator:
-        accordion_header: NOT TRANSLATED YET
-        confirm_code_html: Ingrese el código de su aplicación de autenticador. Si tiene varias cuentas configuradas en su aplicación, ingrese el código correspondiente a <strong>%{email}</strong> en <strong>%{app}</strong>.%{tooltip}
-        or: NOT TRANSLATED YET
-      sms:
-        confirm_code_html: Lo enviamos a %{number}. ¿No recibió un código?
-        fallback_html: NOT TRANSLATED YET
-      voice:
-        confirm_code_html: NOT TRANSLATED YET
-        fallback_html: NOT TRANSLATED YET
-      wrong_number_html: "¿Ha ingresado el número de teléfono equivocado? %{link}"
     account:
       reactivate:
         begin: NOT TRANSLATED YET
@@ -24,6 +12,18 @@ es:
         with_key: NOT TRANSLATED YET
     forgot_password:
       close_window: Puede cerrar esta ventana del navegador despues que haya restablecido su contraseña.
+    mfa:
+      authenticator:
+        accordion_header: NOT TRANSLATED YET
+        confirm_code_html: Ingrese el código de su aplicación de autenticador. Si tiene varias cuentas configuradas en su aplicación, ingrese el código correspondiente a <strong>%{email}</strong> en <strong>%{app}</strong>.%{tooltip}
+        or: NOT TRANSLATED YET
+      sms:
+        confirm_code_html: Lo enviamos a %{number}. ¿No recibió un código?
+        fallback_html: NOT TRANSLATED YET
+      voice:
+        confirm_code_html: NOT TRANSLATED YET
+        fallback_html: NOT TRANSLATED YET
+      wrong_number_html: "¿Ha ingresado el número de teléfono equivocado? %{link}"
     password:
       forgot: 'Si no sabe su contraseña actual, puede restablecerla. Escriba la dirección de correo electrónico asociada a su cuenta para recibir más instrucciones en la pantalla.
 
