--- a/config/locales/instructions/fr.yml
+++ b/config/locales/instructions/fr.yml
@@ -1,18 +1,6 @@
 ---
 fr:
   instructions:
-    2fa:
-      authenticator:
-        accordion_header: Balayez le code avec votre appareil mobile
-        confirm_code_html: Entrez le code à partir de votre application d'authentification. Si vous avez plusieurs comptes configurés dans votre application, entrez le code correspondant à %{email} à %{app}.%{tooltip}
-        or: or
-      sms:
-        confirm_code_html: Nous l'avons envoyé par message texte à %{number}. Vous avez besoin d'un autre code? %{resend_code_link}. Les frais liés aux messages texte peuvent s'appliquer.
-        fallback_html: Si vous ne pouvez recevoir de messages texte pour le moment, vous pouvez %{link}
-      voice:
-        confirm_code_html: Nous venons de vous appeler au %{number}. Vous voulez que nous vous appelions de nouveau? %{resend_code_link}
-        fallback_html: Si vous ne pouvez recevoir d'appels pour le moment, vous pouvez %{link}
-      wrong_number_html: Vous avez entré un mauvais numéro de téléphone? %{link}
     account:
       reactivate:
         begin: NOT TRANSLATED YET
@@ -24,6 +12,18 @@ fr:
         with_key: NOT TRANSLATED YET
     forgot_password:
       close_window: Vous pourrez fermer cette fenêtre de navigateur lorsque vous aurez réinitialisé votre mot de passe.
+    mfa:
+      authenticator:
+        accordion_header: Balayez le code avec votre appareil mobile
+        confirm_code_html: Entrez le code à partir de votre application d'authentification. Si vous avez plusieurs comptes configurés dans votre application, entrez le code correspondant à %{email} à %{app}.%{tooltip}
+        or: or
+      sms:
+        confirm_code_html: Nous l'avons envoyé par message texte à %{number}. Vous avez besoin d'un autre code? %{resend_code_link}. Les frais liés aux messages texte peuvent s'appliquer.
+        fallback_html: Si vous ne pouvez recevoir de messages texte pour le moment, vous pouvez %{link}
+      voice:
+        confirm_code_html: Nous venons de vous appeler au %{number}. Vous voulez que nous vous appelions de nouveau? %{resend_code_link}
+        fallback_html: Si vous ne pouvez recevoir d'appels pour le moment, vous pouvez %{link}
+      wrong_number_html: Vous avez entré un mauvais numéro de téléphone? %{link}
     password:
       forgot: 'Vous ne connaissez pas votre mot de passe? Réinitialisez-le après avoir confirmé votre adresse courriel.
 
