--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -1,18 +1,6 @@
 ---
 en:
   instructions:
-    2fa:
-      authenticator:
-        accordion_header: Scan code with your mobile device
-        confirm_code_html: Enter the code from your authenticator app. If you have several accounts set up in your app, enter the code corresponding to %{email} at %{app}.%{tooltip}
-        or: or
-      sms:
-        confirm_code_html: We sent it in a text message to %{number}. Need another code? %{resend_code_link}. Message rates may apply.
-        fallback_html: If you can't get text messages right now, you can %{link}
-      voice:
-        confirm_code_html: We just called you at %{number}. Want us to call you again? %{resend_code_link}
-        fallback_html: If you can't take a phone call right now, you can %{link}
-      wrong_number_html: Entered the wrong phone number? %{link}
     account:
       reactivate:
         begin: Let's get started.
@@ -28,6 +16,18 @@ en:
         with_key: Do you have your personal key?
     forgot_password:
       close_window: You can close this browser window once you have reset your password.
+    mfa:
+      authenticator:
+        accordion_header: Scan code with your mobile device
+        confirm_code_html: Enter the code from your authenticator app. If you have several accounts set up in your app, enter the code corresponding to %{email} at %{app}.%{tooltip}
+        or: or
+      sms:
+        confirm_code_html: We sent it in a text message to %{number}. Need another code? %{resend_code_link}. Message rates may apply.
+        fallback_html: If you can't get text messages right now, you can %{link}
+      voice:
+        confirm_code_html: We just called you at %{number}. Want us to call you again? %{resend_code_link}
+        fallback_html: If you can't take a phone call right now, you can %{link}
+      wrong_number_html: Entered the wrong phone number? %{link}
     password:
       forgot: 'Don’t know your password? Reset it after confirming your email address.
 
