--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -7,7 +7,7 @@ fr:
       disable: Désactiver
       edit: Modifier
       enable: Activer
-      resend_confirmation: 'Envoyer les instructions de confirmation de nouveau '
+      resend_confirmation: Envoyer les instructions de confirmation de nouveau
       send_security_code: Envoyer le code de sécurité
       submit:
         confirm_change: Confirmer le changement
@@ -25,15 +25,15 @@ fr:
     personal_key:
       alternative: NOT TRANSLATED YET
       confirmation_label: Clé personnelle
-      instructions: Veuillez confirmer que vous avez une copie de votre clé personnelle en l'entrant ci-dessous.
+      instructions: Veuillez confirmer que vous avez une copie de votre clé personnelle
+        en l'entrant ci-dessous.
       title: Entrez votre clé personnelle
     registration:
       labels:
         email: Adresse courriel
     totp_setup:
-      totp_intro_html: 'Lorsque vous vous connectez, vous pouvez obtenir votre code de sécurité d''une application d''authentification. %{link}
-
-'
+      totp_intro_html: Lorsque vous vous connectez, vous pouvez obtenir votre code
+        de sécurité d'une application d'authentification. %{link}
       totp_step_1: Démarrez votre application d'authentification
       totp_step_2: Entrez cette clé dans l'application
       totp_step_3: Entrez le code à partir de l'application
@@ -42,7 +42,8 @@ fr:
       personal_key: Clé personnelle
       try_again: Utilisez un autre numéro de téléphone
     verify_profile:
-      instructions: Entrez le code à dix caractères qui se trouve dans la lettre que nous vous avons envoyée.
+      instructions: Entrez le code à dix caractères qui se trouve dans la lettre que
+        nous vous avons envoyée.
       name: Code de confirmation
       submit: Confirmer le compte
       title: Confirmez votre compte
