--- a/config/locales/help_text/en.yml
+++ b/config/locales/help_text/en.yml
@@ -1,9 +1,8 @@
 ---
 en:
   help_text:
-    change_factor: 'Before you''re able to edit your %{factor}, you will need to confirm your password and receive a security code on your phone.
-
-'
+    change_factor: Before you're able to edit your %{factor}, you will need to confirm
+      your password and receive a security code on your phone.
     requested_attributes:
       address: Mailing address
       birthdate: Date of birth
