--- a/config/locales/links/en.yml
+++ b/config/locales/links/en.yml
@@ -19,7 +19,8 @@ en:
     phone_confirmation:
       auth_app_fallback_html: " or %{link}."
       fallback_to_sms_html: Send me a text message with the code instead
-      fallback_to_voice_html: If you can't get text message right now, you can get a security code via %{link}
+      fallback_to_voice_html: If you can't get text message right now, you can get
+        a security code via %{link}
     privacy_policy: Privacy & security
     remove: Remove
     resend: Resend email
