--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -14,7 +14,9 @@ fr:
       phone: Numéro de téléphone
       previous_address: Adresse précédente
       reactivation:
-        instructions: Votre profil a été récemment désactivé en raison d'une réinitialisation de mot passe. Vous pouvez utiliser votre clé personnelle pour réactiver votre profil.
+        instructions: Votre profil a été récemment désactivé en raison d'une réinitialisation
+          de mot passe. Vous pouvez utiliser votre clé personnelle pour réactiver
+          votre profil.
         link: NOT TRANSLATED YET
       ssn: Numéro d'assurance sociale
       verification:
