--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -4,9 +4,7 @@ en:
     sms_otp_sender_job:
       message: "%{code} is your %{app} one-time security code."
     voice_otp_sender_job:
-      message_final: 'Hello! Your login.gov one time security code is, %{code}, again, your security code is, %{code}, goodbye!
-
-'
-      message_repeat: 'Hello! Your login.gov one time security code is, %{code}, again, your security code is, %{code}. Press 1 to repeat your code.
-
-'
+      message_final: Hello! Your login.gov one time security code is, %{code}, again,
+        your security code is, %{code}, goodbye!
+      message_repeat: Hello! Your login.gov one time security code is, %{code}, again,
+        your security code is, %{code}. Press 1 to repeat your code.
