--- a/config/locales/openid_connect/en.yml
+++ b/config/locales/openid_connect/en.yml
@@ -14,11 +14,13 @@ en:
     token:
       errors:
         invalid_aud: Invalid audience claim, expected %{url}
-        invalid_authentication: Client must authenticate via PKCE or private_key_jwt, missing either code_challenge or client_assertion
+        invalid_authentication: Client must authenticate via PKCE or private_key_jwt,
+          missing either code_challenge or client_assertion
         invalid_code: invalid code
         invalid_code_verifier: code_verifier did not match code_challenge
     user_info:
       errors:
         malformed_authorization: Malformed Authorization header
         no_authorization: No Authorization header provided
-        not_found: Could not find authorization for the contents of the provided access_token or it may have expired
+        not_found: Could not find authorization for the contents of the provided access_token
+          or it may have expired
