--- a/config/locales/openid_connect/fr.yml
+++ b/config/locales/openid_connect/fr.yml
@@ -14,11 +14,13 @@ fr:
     token:
       errors:
         invalid_aud: Affirmation liée à l'auditoire non valide, attendu %{url}
-        invalid_authentication: Le client doit s'authentifier par PKCE ou private_key_jwt, code_challenge ou client_assertion manquant
+        invalid_authentication: Le client doit s'authentifier par PKCE ou private_key_jwt,
+          code_challenge ou client_assertion manquant
         invalid_code: code non valide
         invalid_code_verifier: code_verifier ne correspondait pas à code_challenge
     user_info:
       errors:
         malformed_authorization: Forme de l'en-tête d'autorisation non valide
         no_authorization: Aucune en-tête d'autorisation fournie
-        not_found: L'autorisation pour le contenu du access_token fourni introuvable ou il peut être expiré
+        not_found: L'autorisation pour le contenu du access_token fourni introuvable
+          ou il peut être expiré
