--- a/config/locales/users/fr.yml
+++ b/config/locales/users/fr.yml
@@ -7,7 +7,7 @@ fr:
       generated_on_html: Générée le %{date}
       get_another: Obtenir une autre clé
       header: Votre clé personnelle
-      help_text: |
+      help_text: |-
         Pour protéger votre compte, vous devez avoir un mot de passe et l'accès à votre téléphone ou application d'authentification au moment de la connexion. Si vous ne pouvez utiliser votre téléphone ou application, vous pouvez vous connecter avec votre clé personnelle.
 
         Pour votre confidentialité et votre sécurité, login.gov ne conserve pas votre mot de passe ni votre clé personnelle. Seul(e) vous les connaissez. Seul(e) vous pouvez accéder à votre information personnelle et la partager .
