--- a/config/locales/zxcvbn/es.yml
+++ b/config/locales/zxcvbn/es.yml
@@ -13,12 +13,15 @@ es:
       capitalization_doesnt_help_very_much: NOT TRANSLATED YET
       common_names_and_surnames_are_easy_to_guess: NOT TRANSLATED YET
       dates_are_often_easy_to_guess: NOT TRANSLATED YET
-      for_a_stronger_password_use_a_few_words_separated_by_spaces_but_avoid_common_phrases: NOT TRANSLATED YET
+      for_a_stronger_password_use_a_few_words_separated_by_spaces_but_avoid_common_phrases: NOT
+        TRANSLATED YET
       names_and_surnames_by_themselves_are_easy_to_guess: NOT TRANSLATED YET
-      predictable_substitutions_like__instead_of_a_dont_help_very_much: NOT TRANSLATED YET
+      predictable_substitutions_like__instead_of_a_dont_help_very_much: NOT TRANSLATED
+        YET
       recent_years_are_easy_to_guess: NOT TRANSLATED YET
       repeats_like_aaa_are_easy_to_guess: NOT TRANSLATED YET
-      repeats_like_abcabcabc_are_only_slightly_harder_to_guess_than_abc: NOT TRANSLATED YET
+      repeats_like_abcabcabc_are_only_slightly_harder_to_guess_than_abc: NOT TRANSLATED
+        YET
       reversed_words_arent_much_harder_to_guess: NOT TRANSLATED YET
       sequences_like_abc_or_6543_are_easy_to_guess: NOT TRANSLATED YET
       short_keyboard_patterns_are_easy_to_guess: NOT TRANSLATED YET
