Remove US country code from phone validation
**Why**: In order to support internation numbers, we need to remove the
validation that requires phone numbers have a US country code

Remove US country code from phone normalization

**Why**: We want to allow users to have internation numbers, which means
we need to be prepared to format internation numbers.

Add control for selecting international code

**Why**: Users need to be able to specify their international code so
that we can:

1. Communicate to them whether voice OTP is supported for their country
2. Validate their phone number is properly formatted

Make app aware of intl voice unsupported numbers

**Why**: The app needs to know which international numbers don't support
voice calling so it can render an error in those cases.

Validate phone numbers are valid for intl codes

**Why**: We want to make sure that the phones the users are entering are
plausible phone numbers

**How**: Format phones for their international code before validating
them in the phone forms

Add intl code dropdown to update phone form

**Why**: So that users can select an international phone code when
updating their 2FA phone

--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -19,8 +19,7 @@ fr:
         un autre.
       expired: est expiré, veuillez en demander un nouveau
       format_mismatch: Veuillez vous assurer de respecter le format requis.
-      improbable_phone: Numéro de téléphone non valide. Veuillez vous assurer d'entrer
-        un numéro de téléphone à 10 chiffres.
+      improbable_phone: NOT TRANSLATED YET
       missing_field: Veuillez remplir ce champ.
       no_password_reset_profile: Aucun profil récemment désactivé en raison d'une
         réinitialisation de mot de passe
