--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -16,8 +16,8 @@ en:
         confirmation instructions" to get another one.
       expired: has expired, please request a new one
       format_mismatch: Please match the requested format.
-      improbable_phone: Invalid phone number. Please make sure you enter a 10-digit
-        phone number.
+      improbable_phone: Invalid phone number. Please make sure you enter a valid phone
+        number.
       missing_field: Please fill in this field.
       no_password_reset_profile: No profile has been recently deactivated due to a
         password reset
