--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -16,8 +16,7 @@ es:
         en "Reenviar instrucciones de confirmación" para obtener otro.
       expired: ha caducado, por favor solicite uno nuevo
       format_mismatch: Por favor, use el formato solicitado.
-      improbable_phone: El número de teléfono no es válido. Asegúrese de ingresar
-        un número de teléfono de 10 dígitos.
+      improbable_phone: NOT TRANSLATED YET
       missing_field: Por favor, rellene este campo.
       no_password_reset_profile: Ningún perfil ha sido desactivado recientemente por
         un restablecimiento de contraseña.
